--- a/第一轮.md
+++ b/第一轮.md
@@ -2,6 +2,8 @@
 typora-copy-images-to:images
 ---
 
+#### 格式和图片如果没展示，就把项目clone到本地，每次查看更新就执行git pull
+
 ## 一，重排重绘回流
 
 ​		重绘就是在一个元素外观被改变，但没有改变布局的情况下发生。比如颜色，visibility， outline
